5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1800_2564.log
== TEST (2019-06-06 10:37:50) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	for j in vet2:
		if (i>j):
			v+=1
		elif (i==j):
			e+=1
		else:
			d+=1
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:39:50) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	while ( size(vet1)>g):
		if (i>j):
			v+=1
		elif (i==j):
			e+=1
		else:
			d+=1
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- EXECUTION TIME:
1.22142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 11, in <module>
    if (i>j):
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:40:16) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	while ( size(vet1)>g):
		if (i>j):
			v+=1
		elif (i==j):
			e+=1
		else:
			d+=1
	g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:41:13) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	while ( size(vet1)>g):
		if (i>vet2[g]):
			v+=1
		elif (i==vet2[g]):
			e+=1
		else:
			d+=1
	g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:42:04) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	while ( size(vet1)>g):
		if (i>vet2[g]):
			v+=1
		elif (i==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- EXECUTION TIME:
2.71046
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[6 2 4]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
Time casa:Time fora:[7 6 0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:08) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	while ( size(vet1)>g):
		if (i>vet2[g]):
			v+=1
		elif (i==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:43:40) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array ( eval( input("Time fora:")))
v = 0 
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
for i in vet1:
	while ( size(vet1)>g):
		if (i>vet2[g]):
			v+=1
		elif (i==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:47:26) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array(eval(input("Time fora:")))
v = 0 
i=0
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
while (i<size(vet1)):
	while ( size(vet1)>g):
		if (i>vet2[g]):
			v+=1
		elif (i==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:48:02) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array(eval(input("Time fora:")))
v = 0 
i=0
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
while (i<size(vet1)):
	while ( size(vet1)>g):
		if (vet1[i]>vet2[g]):
			v+=1
		elif (vet[i]==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:48:34) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array(eval(input("Time fora:")))
v = 0 
i=0
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
while (i<size(vet1)):
	while ( size(vet1)>g):
		if (vet1[i]>vet2[g]):
			v+=1
		elif (vet1[i]==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:49:42) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array(eval(input("Time fora:")))
v = 0 
i=0
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
while (i<size(vet1)):
	while ( size(vet1)>g):
		if (vet1[i]>vet2[g]):
			v+=1
		elif (vet1[i]==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1
	i+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:50:17) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array(eval(input("Time fora:")))
v = 0 
i=0
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
while (i<size(vet1)):
	while ( size(vet1)>g):
		if (vet1[i]>vet2[g]):
			v+=1
		elif (vet1[i]==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1
		i+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:50:42) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Time casa:")))
vet2 = array(eval(input("Time fora:")))
v = 0 
i=0
g =0
e = 0
d = 0
a = zeros(3, dtype=int)
while (i<size(vet1)):
	while ( size(vet1)>g):
		if (vet1[i]>vet2[g]):
			v+=1
		elif (vet1[i]==vet2[g]):
			e+=1
		else:
			d+=1
		g+=1
		i+=1	
a[0] = v
a[1] = e
a[2]= d
print(a)
			
	
-- EXECUTION TIME:
0.960728
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
